cicd/install/tekton/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: tekton-ingress
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
  - host: tekton.hquarter.app
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
